--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
               <li class="nav-item">
                 <a href="#" class="nav-link">Services</a>
               </li>
-              <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+              <li class="nav-item">
+                <a href="pages/form.html" class="nav-link">Contact</a>
+              </li>
             </ul>
           </div>
         </div>
